projects/alive-wellness/environments/prod/main.tf
terraform {
  required_version = ">= 1.5.0"
  backend "s3" {
    # The bucket will be populated from the user's bootstrap output
    bucket  = "alive-wellness-terraform-state-174749"
    key     = "alive-wellness/prod/terraform.tfstate"
    region  = "ap-south-1"
    encrypt = true
    profile = "alive-wellness"
  }
  required_providers {
    aws = {
      source  = "hashicorp/aws"
      version = "~> 5.0"
    }
  }
}

provider "aws" {
  region  = var.aws_region
  profile = var.aws_profile

  default_tags {
    tags = {
      ENV = "PROD"
    }
  }
}

data "aws_ssm_parameter" "ubuntu_ami" {
  name = "/aws/service/canonical/ubuntu/server/22.04/stable/current/amd64/hvm/ebs-gp2/ami-id"
}

data "aws_elb_service_account" "main" {}

// =============================================================
// Network
// =============================================================

module "vpc" {
  source               = "../../../../modules/aws/vpc"
  vpc_cidr             = var.vpc_cidr
  enable_dns_hostnames = var.enable_dns_hostnames
  enable_dns_support   = var.enable_dns_support
  instance_tenancy     = var.instance_tenancy
  environment          = var.environment
  project              = var.project
}

module "subnets" {
  source          = "../../../../modules/aws/subnets"
  vpc_id          = module.vpc.vpc_id
  public_subnets  = var.public_subnets
  private_subnets = var.private_subnets
  environment     = var.environment
  project         = var.project
}

module "igw" {
  source      = "../../../../modules/aws/igw"
  vpc_id      = module.vpc.vpc_id
  environment = var.environment
  project     = var.project
}

module "eip" {
  source      = "../../../../modules/aws/eip"
  environment = var.environment
  project     = var.project
}

module "nat_gateway" {
  source            = "../../../../modules/aws/nat_gateway"
  public_subnet_id  = module.subnets.public_subnet_ids["public-1"]
  eip_allocation_id = module.eip.eip_allocation_id
  igw_dependency    = module.igw.igw_id
  environment       = var.environment
  project           = var.project
}

module "route_tables" {
  source             = "../../../../modules/aws/route_tables"
  vpc_id             = module.vpc.vpc_id
  igw_id             = module.igw.igw_id
  nat_gateway_id     = module.nat_gateway.nat_gateway_id
  environment        = var.environment
  project            = var.project
  public_subnet_ids  = module.subnets.public_subnet_ids
  private_subnet_ids = module.subnets.private_subnet_ids
}

// =============================================================
// Security
// =============================================================

module "alb_sg" {
  source      = "../../../../modules/aws/security_groups"
  vpc_id      = module.vpc.vpc_id
  name        = "alb-sg"
  environment = var.environment
  project     = var.project

  ingress_rules = [
    {
      from_port   = 80
      to_port     = 80
      protocol    = "tcp"
      cidr_blocks = ["0.0.0.0/0"]
      description = "Allow HTTP"
    },
    {
      from_port   = 443
      to_port     = 443
      protocol    = "tcp"
      cidr_blocks = ["0.0.0.0/0"]
      description = "Allow HTTPS"
    }
  ]

  egress_rules = [
    {
      from_port   = 0
      to_port     = 0
      protocol    = "-1"
      cidr_blocks = ["0.0.0.0/0"]
      description = "Allow all outbound traffic"
    }
  ]
}

module "frontend_sg" {
  source      = "../../../../modules/aws/security_groups"
  vpc_id      = module.vpc.vpc_id
  name        = "frontend-sg"
  environment = var.environment
  project     = var.project

  ingress_rules = [
    {
      from_port       = 3000
      to_port         = 3000
      protocol        = "tcp"
      security_groups = [module.alb_sg.security_group_id]
      description     = "Allow Frontend Port from ALB"
    }
  ]

  egress_rules = [
    {
      from_port   = 0
      to_port     = 0
      protocol    = "-1"
      cidr_blocks = ["0.0.0.0/0"]
      description = "Allow all outbound traffic"
    }
  ]
}

module "backend_sg" {
  source      = "../../../../modules/aws/security_groups"
  vpc_id      = module.vpc.vpc_id
  name        = "backend-sg"
  environment = var.environment
  project     = var.project

  ingress_rules = [
    {
      from_port       = 3000
      to_port         = 3000
      protocol        = "tcp"
      security_groups = [module.alb_sg.security_group_id]
      description     = "Allow Backend Port from ALB"
    }
  ]

  egress_rules = [
    {
      from_port   = 0
      to_port     = 0
      protocol    = "-1"
      cidr_blocks = ["0.0.0.0/0"]
      description = "Allow all outbound traffic"
    }
  ]
}

module "strapi_sg" {
  source      = "../../../../modules/aws/security_groups"
  vpc_id      = module.vpc.vpc_id
  name        = "strapi-sg"
  environment = var.environment
  project     = var.project

  ingress_rules = [
    {
      from_port       = 1337
      to_port         = 1337
      protocol        = "tcp"
      security_groups = [module.alb_sg.security_group_id]
      description     = "Allow Strapi Port from ALB"
    },
    {
      from_port       = 22
      to_port         = 22
      protocol        = "tcp"
      security_groups = [module.bastion_sg.security_group_id]
      description     = "Allow SSH from Bastion Host"
    }
  ]

  egress_rules = [
    {
      from_port   = 0
      to_port     = 0
      protocol    = "-1"
      cidr_blocks = ["0.0.0.0/0"]
      description = "Allow all outbound traffic"
    }
  ]
}

module "erp_sg" {
  source      = "../../../../modules/aws/security_groups"
  vpc_id      = module.vpc.vpc_id
  name        = "erp-sg"
  environment = var.environment
  project     = var.project

  ingress_rules = [
    {
      from_port       = 8000
      to_port         = 8000
      protocol        = "tcp"
      security_groups = [module.alb_sg.security_group_id]
      description     = "Allow ERP Port from ALB"
    },
    {
      from_port       = 80
      to_port         = 80
      protocol        = "tcp"
      security_groups = [module.alb_sg.security_group_id]
      description     = "Allow ERP Direct Port 8000 from ALB"
    },
    {
      from_port       = 22
      to_port         = 22
      protocol        = "tcp"
      security_groups = [module.bastion_sg.security_group_id]
      description     = "Allow SSH from Bastion Host"
    }
  ]

  egress_rules = [
    {
      from_port   = 0
      to_port     = 0
      protocol    = "-1"
      cidr_blocks = ["0.0.0.0/0"]
      description = "Allow all outbound traffic"
    }
  ]
}

module "saleor_sg" {
  source      = "../../../../modules/aws/security_groups"
  vpc_id      = module.vpc.vpc_id
  name        = "saleor-sg"
  environment = var.environment
  project     = var.project

  ingress_rules = [
    {
      from_port       = 8000
      to_port         = 8000
      protocol        = "tcp"
      security_groups = [module.alb_sg.security_group_id]
      description     = "Allow Saleor API Port from ALB"
    },
    {
      from_port       = 80
      to_port         = 80
      protocol        = "tcp"
      security_groups = [module.alb_sg.security_group_id]
      description     = "Allow Saleor Dashboard Port from ALB"
    }
  ]

  egress_rules = [
    {
      from_port   = 0
      to_port     = 0
      protocol    = "-1"
      cidr_blocks = ["0.0.0.0/0"]
      description = "Allow all outbound traffic"
    }
  ]
}

module "postgres_sg" {
  source      = "../../../../modules/aws/security_groups"
  vpc_id      = module.vpc.vpc_id
  name        = "postgres-sg"
  environment = var.environment
  project     = var.project

  ingress_rules = [
    {
      from_port       = 5432
      to_port         = 5432
      protocol        = "tcp"
      security_groups = [module.backend_sg.security_group_id]
      description     = "Allow Postgres access from Backend API/Worker"
    },
    {
      from_port       = 5432
      to_port         = 5432
      protocol        = "tcp"
      security_groups = [module.saleor_sg.security_group_id]
      description     = "Allow Postgres access from Saleor"
    },
    {
      from_port       = 5432
      to_port         = 5432
      protocol        = "tcp"
      security_groups = [module.strapi_sg.security_group_id]
      description     = "Allow Postgres access from Strapi"
    },
    {
      from_port       = 5432
      to_port         = 5432
      protocol        = "tcp"
      security_groups = [module.bastion_sg.security_group_id]
      description     = "Allow Postgres access from Bastion Host"
    }
  ]

  egress_rules = [
    {
      from_port   = 0
      to_port     = 0
      protocol    = "-1"
      cidr_blocks = ["0.0.0.0/0"]
      description = "Allow all outbound traffic"
    }
  ]
}

module "mariadb_sg" {
  source      = "../../../../modules/aws/security_groups"
  vpc_id      = module.vpc.vpc_id
  name        = "mariadb-sg"
  environment = var.environment
  project     = var.project

  ingress_rules = [
    {
      from_port       = 3306
      to_port         = 3306
      protocol        = "tcp"
      security_groups = [module.erp_sg.security_group_id]
      description     = "Allow MariaDB access from ERP Server"
    },
    {
      from_port       = 3306
      to_port         = 3306
      protocol        = "tcp"
      security_groups = [module.bastion_sg.security_group_id]
      description     = "Allow MariaDB access from Bastion Host"
    }
  ]

  egress_rules = [
    {
      from_port   = 0
      to_port     = 0
      protocol    = "-1"
      cidr_blocks = ["0.0.0.0/0"]
      description = "Allow all outbound traffic"
    }
  ]
}

module "redis_sg" {
  source      = "../../../../modules/aws/security_groups"
  vpc_id      = module.vpc.vpc_id
  name        = "redis-sg"
  environment = var.environment
  project     = var.project

  ingress_rules = [
    {
      from_port       = 6379
      to_port         = 6379
      protocol        = "tcp"
      security_groups = [module.backend_sg.security_group_id]
      description     = "Allow Redis access from Backend API/Worker"
    },
    {
      from_port       = 6379
      to_port         = 6379
      protocol        = "tcp"
      security_groups = [module.saleor_sg.security_group_id]
      description     = "Allow Redis access from Saleor"
    },
    {
      from_port       = 6379
      to_port         = 6379
      protocol        = "tcp"
      security_groups = [module.erp_sg.security_group_id]
      description     = "Allow Redis access from ERP Server"
    }
  ]

  egress_rules = [
    {
      from_port   = 0
      to_port     = 0
      protocol    = "-1"
      cidr_blocks = ["0.0.0.0/0"]
      description = "Allow all outbound traffic"
    }
  ]
}

module "bastion_sg" {
  source      = "../../../../modules/aws/security_groups"
  vpc_id      = module.vpc.vpc_id
  name        = "bastion-sg"
  environment = var.environment
  project     = var.project

  ingress_rules = [
    {
      from_port   = 22
      to_port     = 22
      protocol    = "tcp"
      cidr_blocks = ["0.0.0.0/0"]
      description = "Allow SSH from anywhere (restrict in prod)"
    }
  ]

  egress_rules = [
    {
      from_port   = 0
      to_port     = 0
      protocol    = "-1"
      cidr_blocks = ["0.0.0.0/0"]
      description = "Allow all outbound traffic"
    }
  ]
}

module "ecs_execution_role" {
  source = "../../../../modules/aws/iam_role"
  name   = "${var.environment}-${var.project}-ecs-exec-role"
  assume_role_policy = jsonencode({
    Version = "2012-10-17"
    Statement = [
      {
        Action = "sts:AssumeRole"
        Effect = "Allow"
        Principal = {
          Service = "ecs-tasks.amazonaws.com"
        }
      }
    ]
  })
  environment = var.environment
  project     = var.project
}

resource "aws_iam_role_policy_attachment" "ecs_execution_policy" {
  role       = module.ecs_execution_role.role_name
  policy_arn = "arn:aws:iam::aws:policy/service-role/AmazonECSTaskExecutionRolePolicy"
}

module "backend_secrets" {
  source        = "../../../../modules/aws/secrets_manager"
  secret_name   = "${var.environment}-${var.project}-backend-secrets"
  secret_string = jsonencode(var.backend_secrets)
  environment   = var.environment
  project       = var.project
}

module "saleor_secrets" {
  source        = "../../../../modules/aws/secrets_manager"
  secret_name   = "${var.environment}-${var.project}-saleor-secrets"
  secret_string = jsonencode(var.saleor_secrets)
  environment   = var.environment
  project       = var.project
}

module "ecs_execution_secrets_policy" {
  source      = "../../../../modules/aws/iam_policy"
  name        = "${var.environment}-${var.project}-ecs-secrets-policy"
  description = "Policy to allow ECS execution role to read secrets"
  is_inline   = true
  role_name   = module.ecs_execution_role.role_name
  environment = var.environment
  project     = var.project
  policy = jsonencode({
    Version = "2012-10-17"
    Statement = [
      {
        Effect = "Allow"
        Action = [
          "secretsmanager:GetSecretValue",
          "logs:CreateLogGroup"
        ]
        Resource = [
          module.backend_secrets.secret_arn,
          module.saleor_secrets.secret_arn,
          "arn:aws:logs:${var.aws_region}:*:log-group:/ecs/${var.environment}-${var.project}-*"
        ]
      }
    ]
  })
}

module "ecs_task_role" {
  source = "../../../../modules/aws/iam_role"
  name   = "${var.environment}-${var.project}-ecs-task-role"
  assume_role_policy = jsonencode({
    Version = "2012-10-17"
    Statement = [
      {
        Action = "sts:AssumeRole"
        Effect = "Allow"
        Principal = {
          Service = "ecs-tasks.amazonaws.com"
        }
      }
    ]
  })
  environment = var.environment
  project     = var.project
}

module "ecs_task_s3_policy" {
  source      = "../../../../modules/aws/iam_policy"
  name        = "${var.environment}-${var.project}-ecs-s3-policy"
  description = "Policy to allow ECS tasks to access the S3 media bucket"
  is_inline   = true
  role_name   = module.ecs_task_role.role_name
  environment = var.environment
  project     = var.project
  policy = jsonencode({
    Version = "2012-10-17"
    Statement = [
      {
        Effect = "Allow"
        Action = [
          "s3:PutObject",
          "s3:GetObject",
          "s3:DeleteObject",
          "s3:ListBucket"
        ]
        Resource = [
          aws_s3_bucket.media.arn,
          "${aws_s3_bucket.media.arn}/*"
        ]
      }
    ]
  })
}

module "ec2_ssm_role" {
  source = "../../../../modules/aws/iam_role"
  name   = "${var.environment}-${var.project}-ec2-ssm-role"
  assume_role_policy = jsonencode({
    Version = "2012-10-17"
    Statement = [
      {
        Action = "sts:AssumeRole"
        Effect = "Allow"
        Principal = {
          Service = "ec2.amazonaws.com"
        }
      }
    ]
  })
  policy_arns = [
    "arn:aws:iam::aws:policy/AmazonSSMManagedInstanceCore"
  ]
  environment = var.environment
  project     = var.project
}

resource "aws_iam_instance_profile" "ssm_profile" {
  name = "${var.environment}-${var.project}-ssm-profile"
  role = module.ec2_ssm_role.role_name
}

resource "aws_iam_role_policy" "strapi_s3_access" {
  name = "${var.environment}-${var.project}-ec2-s3-access"
  role = module.ec2_ssm_role.role_name

  policy = jsonencode({
    Version = "2012-10-17"
    Statement = [
      {
        Effect = "Allow"
        Action = [
          "s3:PutObject",
          "s3:GetObject",
          "s3:DeleteObject",
          "s3:ListBucket",
          "s3:GetBucketLocation"
        ]
        Resource = [
          aws_s3_bucket.media.arn,
          "${aws_s3_bucket.media.arn}/*"
        ]
      }
    ]
  })
}

// =============================================================
// Storage & CDN
// =============================================================

resource "aws_s3_bucket" "media" {
  bucket = "${var.project}-${var.environment}-media-assets"

  tags = {
    Environment = var.environment
    Project     = var.project
  }
}

resource "aws_s3_bucket_public_access_block" "media" {
  bucket = aws_s3_bucket.media.id

  block_public_acls       = true
  block_public_policy     = true
  ignore_public_acls      = true
  restrict_public_buckets = true
}

module "cdn" {
  source                         = "../../../../modules/aws/cloudfront"
  s3_bucket_id                   = aws_s3_bucket.media.id
  s3_bucket_regional_domain_name = aws_s3_bucket.media.bucket_regional_domain_name
  environment                    = var.environment
  project                        = var.project
}

resource "aws_s3_bucket_policy" "cdn_access" {
  bucket = aws_s3_bucket.media.id
  policy = jsonencode({
    Version = "2012-10-17"
    Statement = [
      {
        Sid    = "AllowCloudFrontServicePrincipalReadOnly"
        Effect = "Allow"
        Principal = {
          Service = "cloudfront.amazonaws.com"
        }
        Action   = "s3:GetObject"
        Resource = "${aws_s3_bucket.media.arn}/*"
        Condition = {
          StringEquals = {
            "AWS:SourceArn" = module.cdn.cloudfront_distribution_arn
          }
        }
      }
    ]
  })
}

resource "aws_s3_bucket" "alb_logs" {
  bucket        = "${var.project}-${var.environment}-alb-logs-ap-south-1"
  force_destroy = true

  tags = {
    Environment = var.environment
    Project     = var.project
    Purpose     = "ALB Access Logs"
  }
}

resource "aws_s3_bucket_public_access_block" "alb_logs" {
  bucket                  = aws_s3_bucket.alb_logs.id
  block_public_acls       = true
  block_public_policy     = true
  ignore_public_acls      = true
  restrict_public_buckets = true
}

resource "aws_s3_bucket_lifecycle_configuration" "alb_logs" {
  bucket = aws_s3_bucket.alb_logs.id

  rule {
    id     = "expire-logs"
    status = "Enabled"

    filter {}

    expiration {
      days = 90
    }
  }
}

resource "aws_s3_bucket_policy" "alb_logs" {
  bucket = aws_s3_bucket.alb_logs.id

  policy = jsonencode({
    Version = "2012-10-17"
    Statement = [
      {
        Effect = "Allow"
        Principal = {
          AWS = data.aws_elb_service_account.main.arn
        }
        Action   = "s3:PutObject"
        Resource = "${aws_s3_bucket.alb_logs.arn}/*"
      },
      {
        Effect = "Allow"
        Principal = {
          Service = "delivery.logs.amazonaws.com"
        }
        Action   = "s3:PutObject"
        Resource = "${aws_s3_bucket.alb_logs.arn}/*"
        Condition = {
          StringEquals = {
            "s3:x-amz-acl" = "bucket-owner-full-control"
          }
        }
      },
      {
        Effect = "Allow"
        Principal = {
          Service = "delivery.logs.amazonaws.com"
        }
        Action   = "s3:GetBucketAcl"
        Resource = aws_s3_bucket.alb_logs.arn
      }
    ]
  })
}

module "ecr_frontend" {
  source       = "../../../../modules/aws/ecr"
  name         = "alive-wellness-frontend"
  environment  = var.environment
  project      = var.project
  scan_on_push = false
}

module "ecr_backend" {
  source       = "../../../../modules/aws/ecr"
  name         = "alive-wellness-backend"
  environment  = var.environment
  project      = var.project
  scan_on_push = false
}

module "ecr_saleor" {
  source       = "../../../../modules/aws/ecr"
  name         = "alive-wellness-saleor"
  environment  = var.environment
  project      = var.project
  scan_on_push = false
}

// =============================================================
// Database & Cache
// =============================================================

# Standard RDS PostgreSQL for Backend and Saleor
module "rds_postgres" {
  source            = "../../../../modules/aws/rds"
  identifier        = "postgres"
  engine            = "postgres"
  engine_version    = "15"
  instance_class    = "db.t3.large"
  allocated_storage = 200
  storage_type      = "gp3"
  username          = var.master_db_user_name
  password          = var.master_db_user_pass
  apply_immediately = true
  subnet_ids = [
    module.subnets.private_subnet_ids["db-1"],
    module.subnets.private_subnet_ids["db-2"]
  ]
  security_group_ids = [module.postgres_sg.security_group_id]
  environment        = var.environment
  project            = var.project
}

# MariaDB Parameter Group
resource "aws_db_parameter_group" "mariadb_params" {
  name   = "${var.environment}-${var.project}-mariadb10-6"
  family = "mariadb10.6"

  parameter {
    name  = "character_set_server"
    value = "utf8mb4"
  }

  parameter {
    name  = "collation_server"
    value = "utf8mb4_unicode_ci"
  }
}

# MariaDB
module "rds_mariadb" {
  source               = "../../../../modules/aws/rds"
  identifier           = "mariadb"
  engine               = "mariadb"
  engine_version       = "10.6"
  instance_class       = "db.t3.large"
  allocated_storage    = 100
  storage_type         = "gp3"
  username             = var.mariadb_user_name
  password             = var.mariadb_user_pass
  apply_immediately    = true
  parameter_group_name = aws_db_parameter_group.mariadb_params.name
  subnet_ids = [
    module.subnets.private_subnet_ids["db-1"],
    module.subnets.private_subnet_ids["db-2"]
  ]
  security_group_ids = [module.mariadb_sg.security_group_id]
  environment        = var.environment
  project            = var.project
}

# Redis Cluster
module "redis" {
  source             = "../../../../modules/aws/elasticache"
  name               = "redis"
  engine             = "redis"
  node_type          = "cache.t3.micro"
  num_cache_clusters = 1
  transit_encryption = false
  apply_immediately  = true
  subnet_ids = [
    module.subnets.private_subnet_ids["db-1"],
    module.subnets.private_subnet_ids["db-2"]
  ]
  security_group_ids = [module.redis_sg.security_group_id]
  environment        = var.environment
  project            = var.project
}

// =============================================================
// Queues
// =============================================================

module "sqs" {
  source      = "../../../../modules/aws/sqs"
  name        = "prod-be-queue"
  environment = var.environment
  project     = var.project
}

// =============================================================
// Compute
// =============================================================

# Bastion Host
module "bastion_host" {
  source               = "../../../../modules/aws/ec2"
  name                 = "bastion-host"
  instance_type        = "t3.micro"
  ami_id               = data.aws_ssm_parameter.ubuntu_ami.value
  subnet_id            = module.subnets.public_subnet_ids["public-1"]
  security_group_ids   = [module.bastion_sg.security_group_id]
  iam_instance_profile = aws_iam_instance_profile.ssm_profile.name
  associate_public_ip  = true
  environment          = var.environment
  project              = var.project
}

module "bastion_eip" {
  source      = "../../../../modules/aws/eip"
  name        = "bastion-eip"
  instance_id = module.bastion_host.instance_id
  environment = var.environment
  project     = var.project
}


# Strapi Server
module "strapi_server" {
  source               = "../../../../modules/aws/ec2"
  name                 = "strapi-server"
  instance_type        = "t3.small"
  ami_id               = data.aws_ssm_parameter.ubuntu_ami.value
  subnet_id            = module.subnets.private_subnet_ids["app-1"]
  security_group_ids   = [module.strapi_sg.security_group_id]
  iam_instance_profile = aws_iam_instance_profile.ssm_profile.name
  root_volume_size     = 50
  root_volume_type     = "gp3"
  environment          = var.environment
  project              = var.project
}

# ERP Server
module "erp_server" {
  source               = "../../../../modules/aws/ec2"
  name                 = "erp-server"
  instance_type        = "t3.large"
  ami_id               = data.aws_ssm_parameter.ubuntu_ami.value
  subnet_id            = module.subnets.private_subnet_ids["app-2"]
  security_group_ids   = [module.erp_sg.security_group_id]
  iam_instance_profile = aws_iam_instance_profile.ssm_profile.name
  root_volume_size     = 100
  root_volume_type     = "gp3"
  environment          = var.environment
  project              = var.project
}

module "ecs_cluster" {
  source       = "../../../../modules/aws/ecs_cluster"
  cluster_name = "prod-app-cluster"
  environment  = var.environment
  project      = var.project
  container_insights_value = "enhanced"
}

module "ecs_frontend" {
  source             = "../../../../modules/aws/ecs_service"
  service_name       = "${var.environment}-${var.project}-frontend"
  family             = "${var.environment}-${var.project}-frontend-task"
  cluster_arn        = module.ecs_cluster.cluster_arn
  execution_role_arn = module.ecs_execution_role.role_arn
  task_role_arn      = module.ecs_task_role.role_arn
  cpu                = "256"
  memory             = "512"
  launch_type        = "FARGATE"
  environment        = var.environment
  project            = var.project

  security_group_ids = [module.frontend_sg.security_group_id]
  subnet_ids = [
    module.subnets.private_subnet_ids["app-1"],
    module.subnets.private_subnet_ids["app-2"]
  ]
  target_group_arn = module.target_group_frontend.target_group_arn
  container_name   = "frontend"
  container_port   = 3000

  container_definitions = jsonencode([
    {
      name      = "frontend"
      image     = "${module.ecr_frontend.repository_url}:latest"
      essential = true
      portMappings = [
        {
          containerPort = 3000
          protocol      = "tcp"
        }
      ]
      logConfiguration = {
        logDriver = "awslogs"
        options = {
          "awslogs-region"        = var.aws_region
          "awslogs-stream-prefix" = "ecs"
          "awslogs-create-group"  = "true"
          "awslogs-group"         = "/ecs/${var.environment}-${var.project}-frontend"
        }
      }
    }
  ])
}

module "ecs_backend" {
  source             = "../../../../modules/aws/ecs_service"
  platform_version   = "1.4.0"
  service_name       = "${var.environment}-${var.project}-backend"
  family             = "${var.environment}-${var.project}-backend-task"
  cluster_arn        = module.ecs_cluster.cluster_arn
  execution_role_arn = module.ecs_execution_role.role_arn
  task_role_arn      = module.ecs_task_role.role_arn
  cpu                = "512"
  memory             = "1024"
  launch_type        = "FARGATE"
  environment        = var.environment
  project            = var.project

  security_group_ids = [module.backend_sg.security_group_id]
  subnet_ids = [
    module.subnets.private_subnet_ids["app-1"],
    module.subnets.private_subnet_ids["app-2"]
  ]
  target_group_arn = module.target_group_backend.target_group_arn
  container_name   = "backend"
  container_port   = 3000

  container_definitions = jsonencode([
    {
      name      = "backend"
      image     = "${module.ecr_backend.repository_url}:latest"
      essential = true
      portMappings = [
        {
          containerPort = 3000
          protocol      = "tcp"
        }
      ]
      logConfiguration = {
        logDriver = "awslogs"
        options = {
          "awslogs-region"        = var.aws_region
          "awslogs-stream-prefix" = "ecs"
          "awslogs-create-group"  = "true"
          "awslogs-group"         = "/ecs/${var.environment}-${var.project}-backend"
        }
      }
      environment = concat(
        [for k, v in var.backend_env_vars : { name = k, value = v }],
        [
          { name = "DB_HOST", value = module.rds_postgres.address },
          { name = "DB_PORT", value = tostring(module.rds_postgres.port) },
          { name = "REDIS_HOST", value = module.redis.redis_primary_endpoint },
          { name = "REDIS_PORT", value = tostring(module.redis.redis_port) },
          { name = "ERP_WEBHOOK_URL", value = module.sqs.queue_url }
        ]
      )
      secrets = [for k, v in var.backend_secrets : { name = k, valueFrom = "${module.backend_secrets.secret_arn}:${k}::" }]
    }
  ])
}
locals {
  saleor_container_secrets = [for k, v in var.saleor_secrets : { name = k, valueFrom = "${module.saleor_secrets.secret_arn}:${k}::" }]
  saleor_container_env = concat(
    [for k, v in var.saleor_env_vars : { name = k, value = v }],
    [
      { name = "CELERY_BROKER_URL", value = "redis://${module.redis.redis_primary_endpoint}:6379/1" },
      { name = "REDIS_URL", value = "redis://${module.redis.redis_primary_endpoint}:6379/1" },
      { name = "AWS_MEDIA_BUCKET_NAME", value = aws_s3_bucket.media.bucket },
      { name = "AWS_STORAGE_BUCKET_NAME", value = aws_s3_bucket.media.bucket },
      { name = "AWS_S3_REGION_NAME", value = var.aws_region }
    ]
  )
}

module "ecs_backend_worker" {
  source             = "../../../../modules/aws/ecs_service"
  platform_version   = "1.4.0"
  service_name       = "${var.environment}-${var.project}-backend-worker"
  family             = "${var.environment}-${var.project}-backend-worker-task"
  cluster_arn        = module.ecs_cluster.cluster_arn
  execution_role_arn = module.ecs_execution_role.role_arn
  task_role_arn      = module.ecs_task_role.role_arn
  cpu                = "512"
  memory             = "1024"
  launch_type        = "FARGATE"
  environment        = var.environment
  project            = var.project
  health_check_grace_period_seconds = 300

  security_group_ids = [module.backend_sg.security_group_id]
  subnet_ids = [
    module.subnets.private_subnet_ids["app-1"],
    module.subnets.private_subnet_ids["app-2"]
  ]
  target_group_arn = module.target_group_backend_worker.target_group_arn
  container_name   = "backend-worker"
  container_port   = 3000

  container_definitions = jsonencode([
    {
      name      = "backend-worker"
      image     = "544433947816.dkr.ecr.ap-south-1.amazonaws.com/prod-alive-wellness-alive-wellness-backend:dummy"
      command   = ["node", "dist/worker.js"]
      essential = true
      portMappings = [
        {
          containerPort = 3000
          protocol      = "tcp"
        }
      ]
      logConfiguration = {
        logDriver = "awslogs"
        options = {
          "awslogs-region"        = var.aws_region
          "awslogs-stream-prefix" = "ecs"
          "awslogs-create-group"  = "true"
          "awslogs-group"         = "/ecs/${var.environment}-${var.project}-backend-worker"
        }
      }
      environment = concat(
        [for k, v in var.backend_env_vars : { name = k, value = v }],
        [
          { name = "DB_HOST", value = module.rds_postgres.address },
          { name = "DB_PORT", value = tostring(module.rds_postgres.port) },
          { name = "REDIS_HOST", value = module.redis.redis_primary_endpoint },
          { name = "REDIS_PORT", value = tostring(module.redis.redis_port) },
          { name = "ERP_WEBHOOK_URL", value = module.sqs.queue_url }
        ]
      )
      secrets = [for k, v in var.backend_secrets : { name = k, valueFrom = "${module.backend_secrets.secret_arn}:${k}::" }]
    }
  ])
}


module "ecs_saleor_api" {
  source                 = "../../../../modules/aws/ecs_service"
  enable_execute_command = true
  service_name           = "${var.environment}-${var.project}-saleor-api"
  family                 = "${var.environment}-${var.project}-saleor-api-task"
  cluster_arn            = module.ecs_cluster.cluster_arn
  execution_role_arn     = module.ecs_execution_role.role_arn
  task_role_arn          = module.ecs_task_role.role_arn
  cpu                    = "512"
  memory                 = "1024"
  launch_type            = "FARGATE"
  environment            = var.environment
  project                = var.project

  security_group_ids = [module.saleor_sg.security_group_id]
  subnet_ids = [
    module.subnets.private_subnet_ids["app-1"],
    module.subnets.private_subnet_ids["app-2"]
  ]
  target_group_arn = module.target_group_saleor.target_group_arn
  container_name   = "saleor-api"
  container_port   = 8000

  container_definitions = jsonencode([
    {
      name      = "saleor-api"
      image     = "${module.ecr_saleor.repository_url}:latest"
      essential = true
      portMappings = [
        {
          containerPort = 8000
          protocol      = "tcp"
        }
      ]
      logConfiguration = {
        logDriver = "awslogs"
        options = {
          "awslogs-region"        = var.aws_region
          "awslogs-stream-prefix" = "ecs"
          "awslogs-create-group"  = "true"
          "awslogs-group"         = "/ecs/${var.environment}-${var.project}-saleor-api"
        }
      }
      environment = local.saleor_container_env
      secrets     = local.saleor_container_secrets
    }
  ])
}

// =============================================================
// Load Balancing
// =============================================================

module "target_group_frontend" {
  source            = "../../../../modules/aws/target_group"
  name              = "front"
  port              = 3000
  protocol          = "HTTP"
  target_type       = "ip"
  vpc_id            = module.vpc.vpc_id
  health_check_path = "/"
  environment       = var.environment
  project           = var.project
}

module "target_group_backend" {
  source            = "../../../../modules/aws/target_group"
  name              = "back"
  port              = 3000
  protocol          = "HTTP"
  target_type       = "ip"
  vpc_id            = module.vpc.vpc_id
  health_check_path = "/health"
  environment       = var.environment
  project           = var.project
}

module "target_group_backend_worker" {
  source            = "../../../../modules/aws/target_group"
  name              = "bework"
  port              = 3000
  protocol          = "HTTP"
  target_type       = "ip"
  vpc_id            = module.vpc.vpc_id
  health_check_path = "/health"
  environment       = var.environment
  project           = var.project
}

module "target_group_saleor" {
  source            = "../../../../modules/aws/target_group"
  name              = "sale"
  port              = 8000
  protocol          = "HTTP"
  target_type       = "ip"
  vpc_id            = module.vpc.vpc_id
  health_check_path = "/health/"
  environment       = var.environment
  project           = var.project
}

module "alb" {
  source             = "../../../../modules/aws/alb"
  name               = "app"
  security_group_ids = [module.alb_sg.security_group_id]
  subnet_ids = [
    module.subnets.public_subnet_ids["public-1"],
    module.subnets.public_subnet_ids["public-2"]
  ]
  certificate_arn        = var.certificate_arn
  https_target_group_arn = module.target_group_frontend.target_group_arn
  http_default_action    = "redirect_to_https"
  http_target_group_arn  = module.target_group_frontend.target_group_arn
  access_logs_bucket     = aws_s3_bucket.alb_logs.id
  environment            = var.environment
  project                = var.project

  depends_on = [aws_s3_bucket_policy.alb_logs]
}

resource "aws_lb_listener_rule" "backend" {
  listener_arn = module.alb.https_listener_arn
  priority     = 10

  action {
    type             = "forward"
    target_group_arn = module.target_group_backend.target_group_arn
  }

  condition {
    host_header {
      values = ["be.skinverse.in"]
    }
  }
}

resource "aws_lb_listener_rule" "backend_worker" {
  listener_arn = module.alb.https_listener_arn
  priority     = 12

  action {
    type             = "forward"
    target_group_arn = module.target_group_backend_worker.target_group_arn
  }

  condition {
    host_header {
      values = ["worker.skinverse.in"]
    }
  }
}

resource "aws_lb_listener_rule" "saleor" {
  listener_arn = module.alb.https_listener_arn
  priority     = 20

  action {
    type             = "forward"
    target_group_arn = module.target_group_saleor.target_group_arn
  }

  condition {
    host_header {
      values = ["saleor.skinverse.in"]
    }
  }

  condition {
    path_pattern {
      values = ["/graphql*", "/thumbnail/*", "/plugins/*", "/.well-known/*"]
    }
  }
}

// --- Strapi ALB Configuration ---
module "target_group_strapi" {
  source               = "../../../../modules/aws/target_group"
  name                 = "strapi"
  port                 = 1337
  protocol             = "HTTP"
  target_type          = "instance"
  vpc_id               = module.vpc.vpc_id
  health_check_path    = "/_health"
  health_check_matcher = "200-399"
  environment          = var.environment
  project              = var.project
}

resource "aws_lb_target_group_attachment" "strapi" {
  target_group_arn = module.target_group_strapi.target_group_arn
  target_id        = module.strapi_server.instance_id
  port             = 1337
}

resource "aws_lb_listener_rule" "strapi" {
  listener_arn = module.alb.https_listener_arn
  priority     = 30

  action {
    type             = "forward"
    target_group_arn = module.target_group_strapi.target_group_arn
  }

  condition {
    host_header {
      values = ["cms.skinverse.in"] # e.g. cms.alivewellness.com
    }
  }
}

resource "aws_lb_listener_rule" "frontend" {
  listener_arn = module.alb.https_listener_arn
  priority     = 50

  action {
    type             = "forward"
    target_group_arn = module.target_group_frontend.target_group_arn
  }

  condition {
    host_header {
      values = ["skinverse.in", "www.skinverse.in"]
    }
  }
}

// --- ERP ALB Configuration ---
module "target_group_erp" {
  source               = "../../../../modules/aws/target_group"
  name                 = "erp"
  name_override        = "prod-erp-tg-80"
  port                 = 80
  protocol             = "HTTP"
  target_type          = "instance"
  vpc_id               = module.vpc.vpc_id
  health_check_path    = "/health" # Assuming /health is the ERP health check
  health_check_matcher = "200-399"
  environment          = var.environment
  project              = var.project
}

resource "aws_lb_target_group_attachment" "erp" {
  target_group_arn = module.target_group_erp.target_group_arn
  target_id        = module.erp_server.instance_id
  port             = 80
}

resource "aws_lb_listener_rule" "erp" {
  listener_arn = module.alb.https_listener_arn
  priority     = 40

  action {
    type             = "forward"
    target_group_arn = module.target_group_erp.target_group_arn
  }

  condition {
    host_header {
      values = ["erp.skinverse.in"]
    }
  }
}

// =============================================================
// Saleor Worker, Beat, and Dashboard
// =============================================================

module "ecs_saleor_worker" {
  source             = "../../../../modules/aws/ecs_service"
  platform_version   = "1.4.0"
  service_name       = "${var.environment}-${var.project}-saleor-worker"
  family             = "${var.environment}-${var.project}-saleor-worker-task"
  cluster_arn        = module.ecs_cluster.cluster_arn
  execution_role_arn = module.ecs_execution_role.role_arn
  task_role_arn      = module.ecs_task_role.role_arn
  cpu                = "512"
  memory             = "1024"
  launch_type        = "FARGATE"
  environment        = var.environment
  project            = var.project
  desired_count      = 1

  security_group_ids = [module.saleor_sg.security_group_id]
  subnet_ids = [
    module.subnets.private_subnet_ids["app-1"],
    module.subnets.private_subnet_ids["app-2"]
  ]

  container_definitions = jsonencode([
    {
      name      = "saleor-worker"
      image     = "${module.ecr_saleor.repository_url}:latest"
      command   = ["celery", "--app", "saleor.celeryconf:app", "worker", "-E", "--loglevel=info"]
      essential = true
      logConfiguration = {
        logDriver = "awslogs"
        options = {
          "awslogs-region"        = var.aws_region
          "awslogs-stream-prefix" = "ecs"
          "awslogs-create-group"  = "true"
          "awslogs-group"         = "/ecs/${var.environment}-${var.project}-saleor-worker"
        }
      }
      environment = local.saleor_container_env
      secrets     = local.saleor_container_secrets
    }
  ])
}

module "ecs_saleor_beat" {
  source             = "../../../../modules/aws/ecs_service"
  service_name       = "${var.environment}-${var.project}-saleor-beat"
  family             = "${var.environment}-${var.project}-saleor-beat-task"
  cluster_arn        = module.ecs_cluster.cluster_arn
  execution_role_arn = module.ecs_execution_role.role_arn
  task_role_arn      = module.ecs_task_role.role_arn
  cpu                = "512"
  memory             = "1024"
  launch_type        = "FARGATE"
  environment        = var.environment
  project            = var.project
  desired_count      = 1

  deployment_maximum_percent         = 100
  deployment_minimum_healthy_percent = 0
  availability_zone_rebalancing      = "DISABLED"

  security_group_ids = [module.saleor_sg.security_group_id]
  subnet_ids = [
    module.subnets.private_subnet_ids["app-1"],
    module.subnets.private_subnet_ids["app-2"]
  ]

  container_definitions = jsonencode([
    {
      name      = "saleor-beat"
      image     = "${module.ecr_saleor.repository_url}:latest"
      command   = ["celery", "--app", "saleor.celeryconf:app", "beat", "--scheduler", "saleor.schedulers.schedulers.DatabaseScheduler"]
      essential = true
      logConfiguration = {
        logDriver = "awslogs"
        options = {
          "awslogs-region"        = var.aws_region
          "awslogs-stream-prefix" = "ecs"
          "awslogs-create-group"  = "true"
          "awslogs-group"         = "/ecs/${var.environment}-${var.project}-saleor-beat"
        }
      }
      environment = local.saleor_container_env
      secrets     = local.saleor_container_secrets
    }
  ])
}

module "target_group_saleor_dashboard" {
  source            = "../../../../modules/aws/target_group"
  name              = "saledash"
  name_override     = "prod-saledash-tg"
  port              = 80
  protocol          = "HTTP"
  target_type       = "ip"
  vpc_id            = module.vpc.vpc_id
  health_check_path = "/"
  environment       = var.environment
  project           = var.project
}

resource "aws_lb_listener_rule" "saleor_dashboard" {
  listener_arn = module.alb.https_listener_arn
  priority     = 25

  action {
    type             = "forward"
    target_group_arn = module.target_group_saleor_dashboard.target_group_arn
  }

  condition {
    host_header {
      values = ["saleor.skinverse.in"]
    }
  }
}

module "ecs_saleor_dashboard" {
  source             = "../../../../modules/aws/ecs_service"
  service_name       = "${var.environment}-${var.project}-saleor-dashboard"
  family             = "${var.environment}-${var.project}-saleor-dashboard-task"
  cluster_arn        = module.ecs_cluster.cluster_arn
  execution_role_arn = module.ecs_execution_role.role_arn
  task_role_arn      = module.ecs_task_role.role_arn
  cpu                = "256"
  memory             = "512"
  launch_type        = "FARGATE"
  environment        = var.environment
  project            = var.project
  desired_count      = 1

  security_group_ids = [module.saleor_sg.security_group_id]
  subnet_ids = [
    module.subnets.private_subnet_ids["app-1"],
    module.subnets.private_subnet_ids["app-2"]
  ]
  target_group_arn = module.target_group_saleor_dashboard.target_group_arn
  container_name   = "saleor-dashboard"
  container_port   = 80

  container_definitions = jsonencode([
    {
      name      = "saleor-dashboard"
      image     = "ghcr.io/saleor/saleor-dashboard:3.23"
      essential = true
      portMappings = [
        {
          containerPort = 80
          protocol      = "tcp"
        }
      ]
      logConfiguration = {
        logDriver = "awslogs"
        options = {
          "awslogs-region"        = var.aws_region
          "awslogs-stream-prefix" = "ecs"
          "awslogs-create-group"  = "true"
          "awslogs-group"         = "/ecs/${var.environment}-${var.project}-saleor-dashboard"
        }
      }
      environment = [
        { name = "API_URL", value = "https://saleor.skinverse.in/graphql/" }
      ]
    }
  ])
}
